k8s-04/task2/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80
