k8s-04/task2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - name: web
      port: 80
      targetPort: 80
