k8s-04/task2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - name: web
      port: 80
      targetPort: 80
